19990808-10:05 GMT+1 Antonio Linares <alinares@fivetech.com>
   * makefile.b32
     * setkey and devoutp were not properly referenced

19990808-09:34 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/rtl/tbrowse.prg
     * improved
   * tests/working/TestBrw.prg
     * improved

19990808-23:33 EDT Paul Tucker <ptucker@sympatico.ca>
   * source/rtl/gt/gtwin.c
     + add missing =

19990808-03:00 GMT+1 Victor Szel <info@szelvesz.hu>
   * source/rtl/codebloc.c
     source/rtl/itemapi.c
     source/vm/hvm.c
     include/extend.h
     ! hb_Codeblock*() -> hb_codeblock*()
   * source/rtl/codebloc.c
     source/rtl/itemapi.c
     source/rtl/memvars.c
     source/vm/hvm.c
     include/extend.h
     ! hb_Memvar*() -> hb_memvar*()
   * source/vm/hvm.c
     ! Fixed and updated declaration list for HARBOUR functions.
   * source/rdd/dbcmd.c
     source/rtl/arrays.c
     source/rtl/classes.c
     source/rtl/do.c
     source/rtl/errorapi.c
     source/rtl/itemapi.c
     source/rtl/transfrm.c
     source/runner/runner.c
     source/vm/hvm.c
     source/vm/initsymb.c
     include/ctoharb.h
     include/hb_vmpub.h
     * All function belonging to the vm renamed to hb_vm*()
   * source/tools/debug.c
     ! Some functions made static.
   * source/vm/hvm.c
     % Some variable declarations moved to the block which uses it.
   * source/vm/hvm.c
     include/ctoharb.h
     * PushLogical(), PopLogical() uses BOOL instead of int.
   * source/vm/hvm.c
     include/extend.h
     include/ctoharb.h
     * declarations belonging to the vm moved to ctoharb.h
     * declarations belonging to extend moved to extend.h (ulMemory* variables)
   * source/rtl/console.c
     source/rtl/copyfile.c
     source/tools/debug.c
     ! Removed #include "ctoharb.h"
   * source/rtl/gt/gtwin.c
     ! Fixed warning about missing parenthesis.
   * include/ctoharb.h
     ! #include "extend.h"
   * source/runner/runner.c
     ! HB_HB_RUN -> HB_MAIN - So it now works with Win32/GCC.