@@ -77,7 +77,7 @@ HARBOUR HB___MVPRIVATE();
 */
 
 HB_INIT_SYMBOLS_BEGIN( RUNNER )
-{ "HB_RUN",           FS_PUBLIC, HB_HB_RUN          , 0 },
+{ "MAIN",             FS_PUBLIC, HB_MAIN            , 0 },
 { "__AGLOBALSTACK",   FS_PUBLIC, HB___AGLOBALSTACK  , 0 },
 { "__APARAM",         FS_PUBLIC, HB___APARAM        , 0 },
 { "__ASTACK",         FS_PUBLIC, HB___ASTACK        , 0 },
